add swagger docs to user controller
